# discord-alert-transport

./: README.md  USAGE.md  pyproject.toml
docs/: _config.yml  index.md  languages.md  quick-start.md  reference.md  severity-routing.md
examples/: README.md
examples/python/: basic.py  with_severity_router.py
src/discord_alert_transport/: __init__.py  channels.py  embed.py  sender.py
tests/: test.py  test_channels.py  test_embed.py  test_sender.py
