[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-alert-transport"
version = "0.1.0"
description = "Portable Discord webhook notification transport with severity routing, 429 backoff, and audit mirror. Zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jay Patel" }]
keywords = ["discord", "notifications", "webhook", "alerting", "ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/jdp5949/discord-alert-transport"
Documentation = "https://jdp5949.github.io/discord-alert-transport/"
Issues = "https://github.com/jdp5949/discord-alert-transport/issues"
Repository = "https://github.com/jdp5949/discord-alert-transport"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
discord_alert_transport = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
